[package]
name = "git_hooks-lint-arwaky"
version = "1.10.14"
edition = "2021"
description = "Git hook installation and diff-based pre-commit lint enforcement, integrated with the agent orchestrator."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = false

[lints]
workspace = true

[dependencies]  # (unchanged)
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
shared.workspace = true
