[package]
name = "git-hooks-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "Git hook installation and diff-based pre-commit lint enforcement, integrated with the agent orchestrator."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]  # (unchanged)
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
shared.workspace = true
code_analysis.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }

[[bench]]
name = "bench_git_hooks_diff"
path = "benches/bench_git_hooks_diff.rs"
harness = false
