[package]
name = "language_adapters"
version = "1.10.11"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
once_cell = "1.21.4"
regex = "1.10"
tracing = "0.1"
code_analysis = { path = "../code-analysis" }
metrics_service = { path = "../metrics-service" }
output_report = { path = "../output-report" }
pipeline_jobs = { path = "../pipeline-jobs" }
shared = { path = "../shared" }
source_parsing = { path = "../source-parsing" }
