[package]
name = "language_adapters-lint-arwaky"
version = "1.10.13"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
once_cell = "1.21.4"
regex = "1.10"
tracing = "0.1"
rustsec = "0.33"
dirs = "6.0"
code_analysis = { package = "code_analysis-lint-arwaky", path = "../code-analysis" }
output_report = { package = "output_report-lint-arwaky", path = "../output-report" }
pipeline_jobs = { package = "pipeline_jobs-lint-arwaky", path = "../pipeline-jobs" }
shared = { package = "shared-lint-arwaky", path = "../shared" }
source_parsing = { package = "source_parsing-lint-arwaky", path = "../source-parsing" }
