[package]
name = "lifecycle_state-lint-arwaky"
version = "1.10.13"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
pipeline_jobs = { package = "pipeline_jobs-lint-arwaky", path = "../pipeline-jobs" }
shared = { package = "shared-lint-arwaky", path = "../shared" }
