[package]
name = "maintenance-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "Maintenance operations: dep updates, audit sweeps, drift detection, and rule-codebook refreshes for the AES catalog."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]  # (unchanged)
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
shared.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tokio.workspace = true

[[bench]]
name = "bench_maintenance_throughput"
path = "benches/bench_maintenance_throughput.rs"
harness = false
