[package]
name = "mcp_server-lint-arwaky"
version = "1.10.14"
edition = "2021"
description = "Model Context Protocol (MCP) server surfaces exposing the lint pipeline as tools/resources to AI agents."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = false

[lints]
workspace = true

[dependencies]  # (unchanged)
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
once_cell.workspace = true
regex.workspace = true
tracing.workspace = true
shared.workspace = true
source_parsing.workspace = true
cli_commands.workspace = true
code_analysis.workspace = true
external_lint.workspace = true
rmcp.workspace = true
schemars = "1.2"
tokio.workspace = true
anyhow.workspace = true
