[package]
name = "mcp_server-lint-arwaky"
version = "1.10.14"
edition = "2021"
description = "Model Context Protocol (MCP) server surfaces exposing the lint pipeline as tools/resources to AI agents."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = false

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
once_cell.workspace = true
regex.workspace = true
tracing.workspace = true
shared.workspace = true
rmcp.workspace = true
schemars = "1.2"
tokio.workspace = true
anyhow.workspace = true
import_rules.workspace = true
naming_rules.workspace = true
orphan_detector.workspace = true
external_lint.workspace = true
role_rules.workspace = true
code_analysis.workspace = true
config_system.workspace = true
dirs.workspace = true
maintenance.workspace = true
git_hooks.workspace = true
auto_fix.workspace = true
