[package]
name = "metrics_service-lint-arwaky"
version = "1.10.11"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { package = "shared-lint-arwaky", path = "../shared" }
source_parsing = { package = "source_parsing-lint-arwaky", path = "../source-parsing" }
