[package]
name = "multi_project-lint-arwaky"
version = "1.10.14"
edition = "2021"
description = "Multi-project governance: aggregate scan results across N workspaces and apply organisation-wide AES policies."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = false

[lints]
workspace = true

[dependencies]  # (unchanged)
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
shared.workspace = true
source_parsing.workspace = true
config_system.workspace = true
