[package]
name = "naming_rules-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "Naming-convention enforcer for AES101 (lowercase + underscore snake_case stems) and AES102 (suffix taxonomy `_checker`/`_analyzer`/...)."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]  # (unchanged)
async-trait.workspace = true
regex.workspace = true
once_cell.workspace = true
shared.workspace = true
