[package]
name = "naming_rules-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "Naming-convention enforcer for AES101 (lowercase + underscore snake_case stems) and AES102 (suffix taxonomy `_checker`/`_analyzer`/...)."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]  # (unchanged)
async-trait.workspace = true
regex.workspace = true
once_cell.workspace = true
shared.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
shared.workspace = true

[[bench]]
name = "bench_naming_rules_throughput"
path = "tests/bench_naming_rules_throughput.rs"
harness = false
