[package]
name = "orphan_detector-lint-arwaky"
version = "1.10.13"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
code_analysis = { package = "code_analysis-lint-arwaky", path = "../code-analysis" }
output_report = { package = "output_report-lint-arwaky", path = "../output-report" }
shared = { package = "shared-lint-arwaky", path = "../shared" }
source_parsing = { package = "source_parsing-lint-arwaky", path = "../source-parsing" }
