[package]
name = "orphan-detector-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "Unreachable/dead component detector covering AES501–AES506. Flags roles, capabilities, and surfaces that are never wired into an entry point."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
once_cell.workspace = true
shared.workspace = true

[dev-dependencies]
tokio.workspace = true
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_orphan_detector_graph"
path = "tests/bench_orphan_detector_graph.rs"
harness = false

