[package]
name = "output_report-lint-arwaky"
version = "1.10.13"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
code_analysis = { package = "code_analysis-lint-arwaky", path = "../code-analysis" }
pipeline_jobs = { package = "pipeline_jobs-lint-arwaky", path = "../pipeline-jobs" }
shared = { package = "shared-lint-arwaky", path = "../shared" }
source_parsing = { package = "source_parsing-lint-arwaky", path = "../source-parsing" }
