[package]
name = "pipeline_jobs-lint-arwaky"
version = "1.10.11"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["full"] }
multi_project = { package = "multi_project-lint-arwaky", path = "../multi-project" }
shared = { package = "shared-lint-arwaky", path = "../shared" }
source_parsing = { package = "source_parsing-lint-arwaky", path = "../source-parsing" }
