[package]
name = "pipeline_jobs-lint-arwaky"
version = "1.10.11"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { package = "shared-lint-arwaky", path = "../shared" }
source_parsing = { package = "source_parsing-lint-arwaky", path = "../source-parsing" }
tokio = { version = "1.52.3", features = ["full"] }
