[package]
name = "project_setup-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "Project scaffolding and doctor checks: initialises a project with AES-compliant directory layout, MCP config, and CI templates."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]  # (unchanged)
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
shared.workspace = true
dirs.workspace = true
