[package]
name = "role-rules-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "Architectural role-layer violation checks covering AES401–AES406 (taxonomy, contract, capability, infrastructure, surface, root wiring)."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]  # (unchanged)
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
once_cell.workspace = true
regex.workspace = true
shared.workspace = true
