[package]
name = "role-rules-lint-arwaky"
version = "1.10.106"
edition = "2021"
description = "Architectural role-layer violation checks covering AES401–AES406 (taxonomy, contract, capability, infrastructure, surface, root wiring)."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = true

[lints]
workspace = true

[dependencies]  # (unchanged)
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
once_cell.workspace = true
regex.workspace = true
shared.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tokio.workspace = true

[[bench]]
name = "bench_role_rules_throughput"
path = "benches/bench_role_rules_throughput.rs"
harness = false
