[package]
name = "shared-lint-arwaky"
version = "1.10.14"
edition = "2021"
description = "Foundation crate: cross-cutting taxonomy (`_vo`, `_entity`, `_event`, `_error`, `_constant`) and contract (`_port`, `_protocol`, `_aggregate`) types shared by every feature crate."
license = "MIT"
repository = "https://github.com/rakaarwaky/lint-arwaky"
publish = false

[lints]
workspace = true

[dependencies] 
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
anyhow.workspace = true
once_cell.workspace = true
regex.workspace = true
tokio.workspace = true
clap.workspace = true


[dev-dependencies]
tempfile = "3.27.0"
